--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
         <section class="galeria">
             <h2><i class="fas fa-camera"></i> Galería</h2>
             <div class="imagenes">
-                <img src="../paginasrandom/imagenes/festival1.jpg" alt="Festival 1">
-                <img src="../paginasrandom/imagenes/festival2.jpg" alt="Festival 2">
-                <img src="../paginasrandom/imagenes/festival3.jpg" alt="Festival 3">
+                <img src="festival1.jpg" alt="Festival 1">
+                <img src="festival2.jpg" alt="Festival 2">
+                <img src="festival3.jpg" alt="Festival 3">
             </div>
         </section>
 
