--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
   <section id="galeria" class="galeria">
     <h2>Galería</h2>
     <div class="imagenes">
-      <img src="./imagenes/festival1.jpg" alt="Festival 1" />
-      <img src="./imagenes/festival2.jpg" alt="Festival 2" />
-      <img src="./imagenes/festival3.jpg" alt="Festival 3" />
-      <img src="./imagenes/festival4.jpg" alt="Festival 4" />
-      <img src="./imagenes/festival5.jpg" alt="Festival 5" />
+      <img src="festival1.jpg" alt="Festival 1" />
+      <img src="festival2.jpg" alt="Festival 2" />
+      <img src="festival3.jpg" alt="Festival 3" />
+      <img src="festival4.jpg" alt="Festival 4" />
+      <img src="festival5.jpg" alt="Festival 5" />
     </div>
   </section>
 
